[metadata]
name=ret
version = attr: ret.__version__
description = "Rapid Exploratory modelling Toolset (RET)"

[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires =
    adaptive
    dash
    dash_bootstrap_components
    dash_leaflet
    geopy
    gymnasium
    imageio
    mesa
    numpy
    pandas
    pydantic==1.10.7
    pydoe
    scipy
    dash
    pathos
    pyshortcuts
    parameterized
    pytest >= 4.6
    pytest-cov
python_requires = >=3.9

[options.package_data]
ret = "agents/icons/*/*.svg"

[options.extras_require]
dev =
    black
    coverage
    flake8
    mypy
    sphinx
    sphinx-rtd-theme == 1.2.0
    furo
    pre-commit


[options.entry_points]
console_scripts =
    ret_model=ret:run_model
    retplay=retplay:run_gui
    create_retplay_shortcut=ret:create_shortcut
