[metadata]
name=mesa_ret
version = attr: mesa_ret.__version__
description = "Rapid Exploratory modelling Toolset (RET)"

[options]
zip_safe = False
include_package_data = True
packages = find_namespace:
install_requires =
    adaptive
    dash
    dash_bootstrap_components
    dash_leaflet
    geopy
    gym
    imageio
    mesa
    numpy
    pandas
    pydantic
    pydoe
    scipy
    dash
    pathos
python_requires = >=3.9

[options.package_data]
mesa_ret = "agents/icons/*/*.svg"

[options.extras_require]
dev =
    black
    coverage
    flake8
    mypy
    parameterized
    pytest >= 4.6
    pytest-cov
    sphinx
    sphinx-rtd-theme
    furo


[options.entry_points]
console_scripts =
    retgen=retgen.app:run_model
    ret_model=mesa_ret:run_model
    retplay=retplay:run_gui
